--- a/html/index-intro.html
+++ b/html/index-intro.html
@@ -35,8 +35,8 @@
           <!-- Menu-->
           <div class="main-nav">
             <ul>
-              <li> <a href="#">Trang chủ</a></li>
-              <li class="current"><a href="models.html">Models</a></li>
+              <li class="current"><a href="#">Trang chủ</a></li>
+              <li> <a href="models.html">Models</a></li>
               <li> <a href="pgpb.html">PG/PB</a></li>
               <li> <a href="aboutus.html">Về chúng tôi</a></li>
               <li> <a href="news.html">Tin tức</a></li>
@@ -81,6 +81,9 @@
           </div>
           <div class="col-md-3">
             <div data-href="https://www.facebook.com/queenmodel.vn/?fref=ts" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false" class="fb-page"></div>
+          </div>
+          <div class="col-md-12 copyright">
+            <p>&#169 2016 Copyright by QueenModel</p>
           </div>
         </div>
       </div>
